# lorekit

./: .gitignore  .mcp.json  .npc_mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  GAMEMASTER_GUIDE.md  GM_GUIDE.md  Makefile  NOTICE  NPC_GUIDE.md  NPC_TOOLS.md  README.md  SHARED_GUIDE.md  TOOLS.md  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  tui.sh
core/: _args.py  _db.py  _vectordb.py  build_engine.py  character.py  checkpoint.py  combat_engine.py  encounter.py  export.py  init_db.py  journal.py  narrative_time.py  npc_combat.py  npc_memory.py  npc_postprocess.py  npc_reflect.py  prefetch.py  recall.py  region.py  rest.py  rolldice.py  rules_engine.py  rules_formulas.py  rules_stacking.py  session.py  story.py  system_pack.py  timeline.py
cruncher/: LICENSE  NOTICE  README.md  pyproject.toml
cruncher/src/cruncher/: __init__.py  build.py  dice.py  engine.py  errors.py  formulas.py  stacking.py  system_pack.py  types.py
guidelines/: GM_GUIDE.md  GM_TOOLS.md  NPC_GUIDE.md  NPC_TOOLS.md  REWRITING_GUIDE.md
scripts/: _db.py  _vectordb.py  character.py  character.sh  dialogue.py  dialogue.sh  export.py  init_db.sh  journal.py  journal.sh  narrative_time.py  recall.py  region.py  region.sh  rolldice.py  rolldice.sh  rules_engine.py  rules_formulas.py  session.py  session.sh  story.py  timeline.py
systems/: README.md
systems/mm3e/: LICENSE  NOTICE  README.md  abilities.json  advantages.json  conditions.json  effects.json  modifiers.json  pyproject.toml  skills.json  system.json  test_config.json
systems/mm3e/src/cruncher_mm3e/: __init__.py
systems/mm3e/src/cruncher_mm3e/data/: abilities.json  advantages.json  conditions.json  effects.json  equipment.json  modifiers.json  sample_powers.json  skills.json  system.json
systems/pf2e/: LICENSE  NOTICE  README.md  ancestries.json  backgrounds.json  conditions.json  pyproject.toml  system.json  test_config.json
systems/pf2e/classes/: barbarian.json  bard.json  cleric.json  druid.json  magus.json  monk.json  oracle.json  ranger.json  rogue.json  swashbuckler.json
systems/pf2e/src/cruncher_pf2e/: __init__.py
systems/pf2e/src/cruncher_pf2e/data/: ancestries.json  backgrounds.json  conditions.json  equipment.json  feats.json  heritages.json  spells.json  system.json
systems/pf2e/src/cruncher_pf2e/data/classes/: barbarian.json  bard.json  champion.json  cleric.json  druid.json  fighter.json  investigator.json  magus.json  monk.json  oracle.json  ranger.json  rogue.json  sorcerer.json  swashbuckler.json  witch.json  wizard.json
tests/: README.md  TESTS.md  conftest.py  (+52 more)
(+137 files in other folders)
