[project]
name = "lorekit"
version = "0.1.0"
description = "MCP-based TTRPG game engine"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "cruncher",
    "mcp[cli]",
    "sqlite-vec",
    "sentence-transformers",
    "platformdirs",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "pytest-asyncio",
]
server = [
    "starlette",
    "uvicorn",
]

[project.scripts]
lorekit = "lorekit.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lorekit"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name (l, O, I)
    "F401",   # unused import — false positives with lazy imports
    "F841",   # unused variable — false positives in test setup code
]

[tool.ruff.lint.isort]
known-first-party = ["lorekit", "cruncher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-header -q"
