[project]
name = "cruncher"
version = "0.1.0"
description = "Domain-agnostic TTRPG rules engine"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cruncher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-header -q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["cruncher"]
