[project]
name = "cruncher-mm3e"
version = "0.1.0"
description = "d20 Hero SRD (3e) system pack for cruncher"
requires-python = ">=3.12"
license = "LicenseRef-OGL-1.0a"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cruncher_mm3e"]
