[project]
name = "cruncher-pf2e"
version = "0.1.0"
description = "Pathfinder 2e Remaster SRD system pack for cruncher"
requires-python = ">=3.12"
license = "LicenseRef-ORC"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cruncher_pf2e"]
